<project>
	<modelVersion>4.0.0</modelVersion>
	<groupId>fr.vekia.tools</groupId>
	<artifactId>VkLibs-Graph</artifactId>
	<version>1.2.1</version>
	<packaging>jar</packaging>
	<name>Vkl-Graph</name>
	<description>GWT Based graphics librairy</description>
	<url>https://github.com/svandecappelle/vkl-graph</url>
	<properties>
		<!-- convenience to define GWT version in one place -->
		<gwt.version>2.5.0</gwt.version>
		<!-- tell the compiler we can use 1.5 -->
		<maven.compiler.source>1.6</maven.compiler.source>
		<maven.compiler.target>1.6</maven.compiler.target>
	</properties>
	<licenses>
		<license>
			<name>MIT Licence</name>
			<url>https://github.com/svandecappelle/vkl-graph/blob/master/README.md</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<scm>
		<url>https://github.com/svandecappelle/vkl-graph</url>
		<connection>https://github.com/svandecappelle/vkl-graph</connection>
	</scm>
	<developers>
		<developer>
			<name>Steeve Vandecappelle</name>
			<email>svandecappelle@gmail.com</email>
			<timezone>1</timezone>
			<organization>Vekia</organization>
			<organizationUrl>http://vekia.fr</organizationUrl>
			<roles>
				<role>Développeur</role>
			</roles>
		</developer>
	</developers>
	<dependencies>
		<!-- GWT dependencies (from central repo) -->
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-user</artifactId>
			<version>${gwt.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.googlecode.gwt-test-utils</groupId>
			<artifactId>gwt-test-utils</artifactId>
			<version>0.42</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
		</dependency>
	</dependencies>
	<build>
		<outputDirectory>war/WEB-INF/classes</outputDirectory>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>gwt-maven-plugin</artifactId>
				<version>${gwt.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>compile</goal>
							<goal>test</goal>
							<goal>resources</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>-Xmx512M -XX:MaxPermSize=128M</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<!-- compiles for jdk 1.6 -->
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>2.3</version>
					<configuration>
						<target>1.6</target>
						<source>1.6</source>
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>
				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.codehaus.mojo</groupId>
										<artifactId> gwt-maven-plugin
										</artifactId>
										<versionRange> [2.5.0,)
										</versionRange>
										<goals>
											<goal>resources</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore>
										</ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-gpg-plugin</artifactId>
					<executions>
						<execution>
							<id>sign-artifacts</id>
							<phase>verify</phase>
							<goals>
								<goal>sign</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
